fixed landing page whitespace

--- a/src/body/main/scss/main.scss
+++ b/src/body/main/scss/main.scss
@@ -3,4 +3,7 @@ main {
         margin: 5% 0 5% 0;
         padding: 0 10% 0 10%;
     }
+    section:first-of-type {
+        margin-top: 0;
+    }
 }
